﻿[COLOR yellow][B]wersja 9.3.8[/B] - 2021-06-09[/COLOR]
- dodana opcja wykrywania alternatywnych nazw kanałów

[COLOR yellow][B]wersja 9.3.7[/B] - 2021-06-04[/COLOR]
- poprawka odpalenia protokołu .mpd w inputstream helper

[COLOR yellow][B]wersja 9.3.6[/B] - 2021-06-03[/COLOR]
- dodano ikonę nadzoru rodzicielskiego w vosd
- poprawiono wydajność działania
- usunięte błędy

[COLOR yellow][B]wersja 9.3.5[/B] - 2021-05-31[/COLOR]
- zaktualizowany algorytm kategorii programu
- usunięte błędy

[COLOR yellow][B]wersja 9.3.4[/B] - 2021-05-23[/COLOR]
- poprawka działania archiwum

[COLOR yellow][B]wersja 9.3.3[/B] - 2021-05-22[/COLOR]
- optymalizacje
- usunięte błędy

[COLOR yellow][B]wersja 9.3.2[/B] - 2021-05-19[/COLOR]
- poprawka memoryerror przy szybkim parsowaniu epg
- poprawiono wydajność działania
- usunięte błędy

[COLOR yellow][B]wersja 9.3.1[/B] - 2021-05-12[/COLOR]
- dodana opcja wprowadzenia kanałów bez epg 
- poprawka błędu parsowania
- dodana opcja nagrywaj i oglądaj
- dodano ustawienie aby kontynuować odtwarzanie, nagrywanie i
pobieranie usług w tle po zakonczeniu wtyczki

[COLOR yellow][B]wersja 9.3.0[/B] - 2021-04-13[/COLOR]
- poprawka nagrywania z serwisu WP Pilot
- dodana funkcja timeshift do serwisu Telia Play
- poprawka błędu szyfrowania
- naprawiono przycisk resetowania w menu pobierania
- dodano wskaźnik prędkości pobierania
- usunięte błędy

[COLOR yellow][B]wersja 9.2.9[/B] - 2021-04-05[/COLOR]
- poprawiono wydajność działania
- poprawka zanikajacych ikon
- dodane nowe menu pobierania
- dodana opcja cachowania playlisty
- usunięte błędy

[COLOR yellow][B]wersja 9.2.8[/B] - 2021-02-27[/COLOR]
- poprawka serwisu Telia Play
- poprawiony kod statusu odpowiedzi

[COLOR yellow][B]wersja 9.2.7[/B] - 2021-02-26[/COLOR]
- poprawka serwisu Cyfrowy Polsat GO
- poprawka serwisu Nc+ GO

[COLOR yellow][B]wersja 9.2.6[/B] - 2021-02-24[/COLOR]
- poprawka format ciągu timeshift
- dodano Cloudflare bypasser

[COLOR yellow][B]wersja 9.2.5[/B] - 2021-02-22[/COLOR]