@@ -1,4 +1,7 @@
-﻿[COLOR yellow][B]wersja 9.3.8[/B] - 2021-06-09[/COLOR]
+﻿[COLOR yellow][B]wersja 9.3.9[/B] - 2021-06-10[/COLOR]
+- aktualizacja bazy mapowej
+
+[COLOR yellow][B]wersja 9.3.8[/B] - 2021-06-09[/COLOR]
 - dodana opcja wykrywania alternatywnych nazw kanałów
 
 [COLOR yellow][B]wersja 9.3.7[/B] - 2021-06-04[/COLOR]
